[package]
name = "liter-llm-py"
version = "1.4.0-rc.27"
edition = "2024"
license = "MIT"
description = "Universal LLM API client with Rust-powered polyglot bindings."
readme = false
keywords = ["llm", "api-client", "openai", "anthropic"]
categories = ["text-processing"]

[lib]
name = "_internal_bindings"
crate-type = ["cdylib"]

[dependencies]
liter-llm = { path = "../liter-llm", features = ["native-http", "full"] }
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]
