[package]
name = "liter-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Universal LLM API client — 142+ providers, streaming, tool calling. Rust-powered, type-safe, compiled."
readme = "README.md"
keywords = ["llm", "openai", "api-client", "ai", "xberg"]
categories = ["api-bindings", "web-programming::http-client"]

[package.metadata.cargo-machete]
ignored = ["dashmap", "tower-http"]

[features]

# ~keep Disable `native-http` for WebAssembly; browser and Node builds use fetch
# ~keep and cannot run the Tokio multi-thread runtime.
native-http = [
    "dep:reqwest",
    # ~keep reqwest/http2 gates `ClientBuilder::http2_prior_knowledge()`, which
    # ~keep backs `TransportConfig::http2_prior_knowledge`.
    "reqwest/http2",
    # ~keep dep:rustls is only present on non-Windows; Cargo ignores optional
    # ~keep feature activations for absent target-conditional deps.
    "dep:rustls",
    "dep:tokio",
    "dep:tokio-util",
    "dep:memchr",
    "dep:gcp_auth",
]

wasm-http = ["dep:reqwest", "dep:memchr", "dep:gloo-timers", "dep:web-time"]

tracing = ["dep:tracing"]

otel = ["tracing", "dep:tracing-opentelemetry", "dep:opentelemetry"]

tower = ["dep:tower", "dep:tower-http", "dep:futures-util", "tracing"]

opendal-cache = ["dep:opendal", "tower"]

guardrail-cel = ["dep:cel-interpreter"]

# ~keep Without `bedrock`, `BedrockProvider` still routes `bedrock/` model names
# ~keep and strips the prefix, but sends unsigned requests for mock base URLs.
bedrock = ["native-http", "dep:aws-credential-types", "dep:aws-sigv4"]

azure-auth = ["native-http"]

copilot-auth = ["native-http"]

vertex-auth = ["native-http", "dep:jsonwebtoken"]

# ~keep Back-compat alias: native-http already pulls in gcp_auth, so the ADC
# ~keep provider is reachable whenever native-http is on.
vertex-adc = ["native-http"]

bedrock-auth = ["native-http"]

http3 = ["native-http"]

tokenizer = ["dep:tokenizers"]

lite = ["native-http"]

full = [
    "native-http",
    "tower",
    "tracing",
    "otel",
    "bedrock",
    "tokenizer",
    "azure-auth",
    "copilot-auth",
    "vertex-auth",
    "vertex-adc",
    "bedrock-auth",
    "opendal-cache",
]

etcd-key-resolver = ["dep:etcd-client", "dep:hex", "dep:sha2"]

# ~keep Default remains native HTTP only so downstream `cargo build` avoids heavy deps.
default = ["native-http"]

[dependencies]
ahash = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
aws-credential-types = { version = "1", optional = true }
aws-sigv4 = { version = "1", features = ["sign-http", "http1"], optional = true }
# ~keep Image data-URI helpers are transport-agnostic and must stay available
# ~keep outside `native-http` and `wasm-http`.
base64 = { workspace = true }
bytes = { workspace = true }
cel-interpreter = { version = "0.10", optional = true }
dashmap = { workspace = true }
etcd-client = { workspace = true, optional = true }
futures-core = { workspace = true }
futures-util = { workspace = true, optional = true }
gcp_auth = { workspace = true, optional = true }
gloo-timers = { version = "0.4", features = ["futures"], optional = true }
hex = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
memchr = { workspace = true, optional = true }
opendal = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
regex = "1"
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true }
tokenizers = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time", "rt", "macros"], optional = true }
tokio-util = { workspace = true, optional = true }
toml = { workspace = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
url = { workspace = true }
web-time = { version = "1", optional = true }

# ~keep Non-Windows uses rustls + ring to avoid aws-lc-sys as the bundled TLS provider.
# ~keep The workspace reqwest base is TLS-agnostic; this layer supplies TLS.
[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { workspace = true, optional = true, features = ["rustls-no-provider"] }
rustls = { workspace = true, optional = true }

# ~keep Windows uses SChannel via native-tls to avoid aws-lc-sys MSVC build failures.
# ~keep rustls is intentionally not pulled in on Windows.
[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { workspace = true, optional = true, features = ["native-tls"] }

[dev-dependencies]
ctor = "1.0"
etcd-client = { workspace = true }
futures-util = { workspace = true }
jsonschema = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
